--- a/diadev/package.json
+++ b/diadev/package.json
@@ -21,6 +21,11 @@
     "@angular/platform-browser": "^12.2.0",
     "@angular/platform-browser-dynamic": "^12.2.0",
     "@angular/router": "^12.2.0",
+    "@ngrx/component-store": "~12.4.0",
+    "@ngrx/effects": "~12.4.0",
+    "@ngrx/entity": "~12.4.0",
+    "@ngrx/router-store": "~12.4.0",
+    "@ngrx/store": "^12.4.0",
     "@nrwl/angular": "12.10.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -34,6 +39,8 @@
     "@angular/cli": "~12.2.0",
     "@angular/compiler-cli": "^12.2.0",
     "@angular/language-service": "^12.2.0",
+    "@ngrx/schematics": "~12.4.0",
+    "@ngrx/store-devtools": "~12.4.0",
     "@nrwl/cli": "12.10.0",
     "@nrwl/cypress": "12.10.0",
     "@nrwl/eslint-plugin-nx": "12.10.0",
@@ -49,6 +56,8 @@
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-ngrx": "^1.0.0",
+    "eslint-plugin-rxjs": "^3.3.7",
     "jest": "27.2.3",
     "jest-preset-angular": "10.0.1",
     "prettier": "^2.3.1",
