add products feature

--- a/diadev/nx.json
+++ b/diadev/nx.json
@@ -33,6 +33,9 @@
     "carbotracker-e2e": {
       "tags": [],
       "implicitDependencies": ["carbotracker"]
+    },
+    "products": {
+      "tags": []
     }
   }
 }
