--- a/diadev/nx.json
+++ b/diadev/nx.json
@@ -34,6 +34,9 @@
       "tags": [],
       "implicitDependencies": ["carbotracker"]
     },
+    "localstorage": {
+      "tags": []
+    },
     "products": {
       "tags": []
     }
