--- a/diadev/apps/carbotracker-e2e/.eslintrc.json
+++ b/diadev/apps/carbotracker-e2e/.eslintrc.json
@@ -4,6 +4,9 @@
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
+      "parserOptions": {
+        "project": ["apps/carbotracker-e2e/tsconfig.*?.json"]
+      },
       "rules": {}
     },
     {
