--- a/diadev/package.json
+++ b/diadev/package.json
@@ -61,6 +61,7 @@
     "jest": "27.2.3",
     "jest-preset-angular": "10.0.1",
     "prettier": "^2.3.1",
+    "rxjs-marbles": "^6.0.1",
     "ts-jest": "27.0.5",
     "typescript": "~4.3.5"
   }
