--- a/diadev/nx.json
+++ b/diadev/nx.json
@@ -37,6 +37,9 @@
     "localstorage": {
       "tags": []
     },
+    "meals": {
+      "tags": []
+    },
     "products": {
       "tags": []
     },
