--- a/diadev/tsconfig.base.json
+++ b/diadev/tsconfig.base.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@diadev/localstorage": ["libs/localstorage/src/index.ts"],
+      "@diadev/meals": ["libs/meals/src/index.ts"],
       "@diadev/products": ["libs/products/src/index.ts"],
       "@diadev/ui": ["libs/ui/src/index.ts"]
     }
