--- a/diadev/libs/meals/.eslintrc.json
+++ b/diadev/libs/meals/.eslintrc.json
@@ -4,6 +4,9 @@
   "overrides": [
     {
       "files": ["*.ts"],
+      "parserOptions": {
+        "project": ["libs/meals/tsconfig.*?.json"]
+      },
       "extends": [
         "plugin:@nrwl/nx/angular",
         "plugin:@angular-eslint/template/process-inline-templates"
