--- a/diadev/package.json
+++ b/diadev/package.json
@@ -7,7 +7,10 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "ci:lint": "nx affected --target=lint --base=origin/main",
+    "ci:test": "nx affected --target=test --base=origin/main",
+    "ci:e2e": "nx affected --target=e2e --base=origin/main"
   },
   "private": true,
   "dependencies": {
