--- a/diadev/angular.json
+++ b/diadev/angular.json
@@ -92,7 +92,8 @@
             "passWithNoTests": true
           }
         }
-      }
+      },
+      "tags": []
     },
     "carbotracker-e2e": {
       "root": "apps/carbotracker-e2e",
@@ -119,7 +120,9 @@
             "lintFilePatterns": ["apps/carbotracker-e2e/**/*.{js,ts}"]
           }
         }
-      }
+      },
+      "tags": [],
+      "implicitDependencies": ["carbotracker"]
     },
     "localstorage": {
       "projectType": "library",
@@ -144,7 +147,8 @@
             ]
           }
         }
-      }
+      },
+      "tags": []
     },
     "meals": {
       "projectType": "library",
@@ -169,7 +173,8 @@
             ]
           }
         }
-      }
+      },
+      "tags": []
     },
     "products": {
       "projectType": "library",
@@ -194,7 +199,8 @@
             ]
           }
         }
-      }
+      },
+      "tags": []
     },
     "ui": {
       "projectType": "library",
@@ -216,39 +222,8 @@
             "lintFilePatterns": ["libs/ui/src/**/*.ts", "libs/ui/src/**/*.html"]
           }
         }
-      }
-    }
-  },
-  "cli": {
-    "defaultCollection": "@nrwl/angular",
-    "packageManager": "npm"
-  },
-  "schematics": {
-    "@nrwl/angular": {
-      "application": {
-        "linter": "eslint"
       },
-      "library": {
-        "linter": "eslint"
-      },
-      "storybook-configuration": {
-        "linter": "eslint"
-      }
-    },
-    "@nrwl/angular:application": {
-      "style": "scss",
-      "linter": "eslint",
-      "unitTestRunner": "jest",
-      "e2eTestRunner": "cypress"
-    },
-    "@nrwl/angular:library": {
-      "style": "scss",
-      "linter": "eslint",
-      "unitTestRunner": "jest"
-    },
-    "@nrwl/angular:component": {
-      "style": "scss"
+      "tags": []
     }
-  },
-  "defaultProject": "carbotracker"
+  }
 }
