--- a/diadev/.eslintrc.json
+++ b/diadev/.eslintrc.json
@@ -19,15 +19,16 @@
             ]
           }
         ]
-      },
-      "plugins": ["ngrx"],
-      "extends": ["plugin:ngrx/recommended"]
+      }
     },
     {
       "files": ["*.ts", "*.tsx"],
-      "extends": ["plugin:@nrwl/nx/typescript", "plugin:ngrx/recommended"],
-      "rules": {},
-      "plugins": ["ngrx"]
+      "extends": ["plugin:@nrwl/nx/typescript"],
+      "rules": {}
+    },
+    {
+      "files": ["*.ts"],
+      "extends": ["plugin:ngrx/recommended"]
     },
     {
       "files": ["*.js", "*.jsx"],
