--- a/diadev/package.json
+++ b/diadev/package.json
@@ -53,13 +53,13 @@
     "@nrwl/workspace": "13.4.2",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
-    "@typescript-eslint/eslint-plugin": "5.3.1",
-    "@typescript-eslint/parser": "5.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@typescript-eslint/parser": "^5.8.1",
     "cypress": "^8.3.0",
     "eslint": "8.2.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-ngrx": "^1.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-ngrx": "^2.0.3",
     "eslint-plugin-rxjs": "^3.3.7",
     "jest": "27.2.3",
     "jest-preset-angular": "11.0.0",
