--- a/package.json
+++ b/package.json
@@ -15,58 +15,58 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "13.1.1",
-    "@angular/cdk": "13.1.1",
-    "@angular/common": "13.1.1",
-    "@angular/compiler": "13.1.1",
-    "@angular/core": "13.1.1",
-    "@angular/forms": "13.1.1",
-    "@angular/material": "13.1.1",
-    "@angular/platform-browser": "13.1.1",
-    "@angular/platform-browser-dynamic": "13.1.1",
-    "@angular/router": "13.1.1",
+    "@angular/animations": "13.3.11",
+    "@angular/cdk": "13.3.9",
+    "@angular/common": "13.3.11",
+    "@angular/compiler": "13.3.11",
+    "@angular/core": "13.3.11",
+    "@angular/forms": "13.3.11",
+    "@angular/material": "13.3.9",
+    "@angular/platform-browser": "13.3.11",
+    "@angular/platform-browser-dynamic": "13.3.11",
+    "@angular/router": "13.3.11",
     "@ngrx/component-store": "13.0.2",
     "@ngrx/effects": "13.0.2",
     "@ngrx/entity": "13.0.2",
     "@ngrx/router-store": "13.0.2",
     "@ngrx/store": "13.0.2",
-    "@nrwl/angular": "13.4.2",
+    "@nrwl/angular": "13.10.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "13.1.2",
+    "@angular-devkit/build-angular": "13.3.9",
     "@angular-eslint/eslint-plugin": "13.0.1",
     "@angular-eslint/eslint-plugin-template": "13.0.1",
     "@angular-eslint/template-parser": "13.0.1",
-    "@angular/cli": "13.1.2",
-    "@angular/compiler-cli": "13.1.1",
-    "@angular/language-service": "13.1.1",
+    "@angular/cli": "13.3.9",
+    "@angular/compiler-cli": "13.3.11",
+    "@angular/language-service": "13.3.11",
     "@ngrx/schematics": "13.0.2",
     "@ngrx/store-devtools": "13.0.2",
     "@nrwl/cli": "13.4.2",
-    "@nrwl/cypress": "13.4.2",
-    "@nrwl/eslint-plugin-nx": "13.4.2",
-    "@nrwl/jest": "13.4.2",
-    "@nrwl/linter": "13.4.2",
-    "@nrwl/tao": "13.4.2",
-    "@nrwl/workspace": "13.4.2",
+    "@nrwl/cypress": "13.10.3",
+    "@nrwl/eslint-plugin-nx": "13.10.3",
+    "@nrwl/jest": "13.10.3",
+    "@nrwl/linter": "13.10.3",
+    "@nrwl/workspace": "13.10.3",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
-    "@typescript-eslint/eslint-plugin": "^5.8.1",
-    "@typescript-eslint/parser": "^5.8.1",
+    "@typescript-eslint/eslint-plugin": "5.18.0",
+    "@typescript-eslint/parser": "5.18.0",
     "cypress": "^8.3.0",
-    "eslint": "8.2.0",
+    "eslint": "8.12.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-ngrx": "^2.0.3",
     "eslint-plugin-rxjs": "^3.3.7",
     "jest": "27.2.3",
-    "jest-preset-angular": "11.0.0",
-    "prettier": "^2.5.1",
+    "jest-preset-angular": "11.1.1",
+    "prettier": "2.7.1",
     "rxjs-marbles": "^6.0.1",
     "ts-jest": "27.0.5",
-    "typescript": "4.5.4"
+    "typescript": "4.6.4",
+    "nx": "13.10.3"
   }
 }
