--- a/angular.json
+++ b/angular.json
@@ -9,9 +9,7 @@
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
-          "outputs": [
-            "{options.outputPath}"
-          ],
+          "outputs": ["{options.outputPath}"],
           "options": {
             "outputPath": "dist/apps/carbotracker",
             "index": "apps/carbotracker/src/index.html",
@@ -23,9 +21,7 @@
               "apps/carbotracker/src/favicon.ico",
               "apps/carbotracker/src/assets"
             ],
-            "styles": [
-              "apps/carbotracker/src/styles.scss"
-            ],
+            "styles": ["apps/carbotracker/src/styles.scss"],
             "scripts": []
           },
           "configurations": {
@@ -90,11 +86,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": [
-            "coverage/apps/carbotracker"
-          ],
+          "outputs": ["coverage/apps/carbotracker"],
           "options": {
-            "jestConfig": "apps/carbotracker/jest.config.js",
+            "jestConfig": "apps/carbotracker/jest.config.ts",
             "passWithNoTests": true
           }
         }
@@ -121,20 +115,14 @@
         },
         "lint": {
           "builder": "@nrwl/linter:eslint",
-          "outputs": [
-            "{options.outputFile}"
-          ],
+          "outputs": ["{options.outputFile}"],
           "options": {
-            "lintFilePatterns": [
-              "apps/carbotracker-e2e/**/*.{js,ts}"
-            ]
+            "lintFilePatterns": ["apps/carbotracker-e2e/**/*.{js,ts}"]
           }
         }
       },
       "tags": [],
-      "implicitDependencies": [
-        "carbotracker"
-      ]
+      "implicitDependencies": ["carbotracker"]
     },
     "localstorage": {
       "projectType": "library",
@@ -144,11 +132,9 @@
       "architect": {
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": [
-            "coverage/libs/localstorage"
-          ],
+          "outputs": ["coverage/libs/localstorage"],
           "options": {
-            "jestConfig": "libs/localstorage/jest.config.js",
+            "jestConfig": "libs/localstorage/jest.config.ts",
             "passWithNoTests": true
           }
         },
@@ -172,11 +158,9 @@
       "architect": {
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": [
-            "coverage/libs/meals"
-          ],
+          "outputs": ["coverage/libs/meals"],
           "options": {
-            "jestConfig": "libs/meals/jest.config.js",
+            "jestConfig": "libs/meals/jest.config.ts",
             "passWithNoTests": true
           }
         },
@@ -200,11 +184,9 @@
       "architect": {
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": [
-            "coverage/libs/products"
-          ],
+          "outputs": ["coverage/libs/products"],
           "options": {
-            "jestConfig": "libs/products/jest.config.js",
+            "jestConfig": "libs/products/jest.config.ts",
             "passWithNoTests": true
           }
         },
@@ -228,21 +210,16 @@
       "architect": {
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": [
-            "coverage/libs/ui"
-          ],
+          "outputs": ["coverage/libs/ui"],
           "options": {
-            "jestConfig": "libs/ui/jest.config.js",
+            "jestConfig": "libs/ui/jest.config.ts",
             "passWithNoTests": true
           }
         },
         "lint": {
           "builder": "@nrwl/linter:eslint",
           "options": {
-            "lintFilePatterns": [
-              "libs/ui/src/**/*.ts",
-              "libs/ui/src/**/*.html"
-            ]
+            "lintFilePatterns": ["libs/ui/src/**/*.ts", "libs/ui/src/**/*.html"]
           }
         }
       },
