--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "nx",
-    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
+    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
@@ -15,58 +15,58 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "13.3.11",
-    "@angular/cdk": "13.3.9",
-    "@angular/common": "13.3.11",
-    "@angular/compiler": "13.3.11",
-    "@angular/core": "13.3.11",
-    "@angular/forms": "13.3.11",
-    "@angular/material": "13.3.9",
-    "@angular/platform-browser": "13.3.11",
-    "@angular/platform-browser-dynamic": "13.3.11",
-    "@angular/router": "13.3.11",
-    "@ngrx/component-store": "13.0.2",
-    "@ngrx/effects": "13.0.2",
-    "@ngrx/entity": "13.0.2",
-    "@ngrx/router-store": "13.0.2",
-    "@ngrx/store": "13.0.2",
-    "@nrwl/angular": "14.1.10",
+    "@angular/animations": "14.0.7",
+    "@angular/cdk": "14.0.6",
+    "@angular/common": "14.0.7",
+    "@angular/compiler": "14.0.7",
+    "@angular/core": "14.0.7",
+    "@angular/forms": "14.0.7",
+    "@angular/material": "14.0.6",
+    "@angular/platform-browser": "14.0.7",
+    "@angular/platform-browser-dynamic": "14.0.7",
+    "@angular/router": "14.0.7",
+    "@ngrx/component-store": "13.2.0",
+    "@ngrx/effects": "13.2.0",
+    "@ngrx/entity": "13.2.0",
+    "@ngrx/router-store": "13.2.0",
+    "@ngrx/store": "13.2.0",
+    "@nrwl/angular": "14.2.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "13.3.9",
-    "@angular-eslint/eslint-plugin": "13.0.1",
-    "@angular-eslint/eslint-plugin-template": "13.0.1",
-    "@angular-eslint/template-parser": "13.0.1",
-    "@angular/cli": "13.3.9",
-    "@angular/compiler-cli": "13.3.11",
-    "@angular/language-service": "13.3.11",
-    "@ngrx/schematics": "13.0.2",
-    "@ngrx/store-devtools": "13.0.2",
-    "@nrwl/cli": "13.4.2",
-    "@nrwl/cypress": "14.1.10",
-    "@nrwl/eslint-plugin-nx": "14.1.10",
-    "@nrwl/jest": "14.1.10",
-    "@nrwl/linter": "14.1.10",
-    "@nrwl/workspace": "14.1.10",
+    "@angular-devkit/build-angular": "14.0.7",
+    "@angular-eslint/eslint-plugin": "13.2.1",
+    "@angular-eslint/eslint-plugin-template": "13.2.1",
+    "@angular-eslint/template-parser": "13.2.1",
+    "@angular/cli": "~14.0.0",
+    "@angular/compiler-cli": "14.0.7",
+    "@angular/language-service": "14.0.7",
+    "@ngrx/schematics": "13.2.0",
+    "@ngrx/store-devtools": "13.2.0",
+    "@nrwl/cli": "14.2.4",
+    "@nrwl/cypress": "14.2.4",
+    "@nrwl/eslint-plugin-nx": "14.2.4",
+    "@nrwl/jest": "14.2.4",
+    "@nrwl/linter": "14.2.4",
+    "@nrwl/workspace": "14.2.4",
     "@types/jest": "27.4.1",
     "@types/node": "14.14.33",
-    "@typescript-eslint/eslint-plugin": "5.18.0",
-    "@typescript-eslint/parser": "5.18.0",
+    "@typescript-eslint/eslint-plugin": "5.24.0",
+    "@typescript-eslint/parser": "5.24.0",
     "cypress": "^8.3.0",
-    "eslint": "8.12.0",
+    "eslint": "8.15.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-ngrx": "^2.0.3",
     "eslint-plugin-rxjs": "^3.3.7",
     "jest": "27.5.1",
-    "jest-preset-angular": "11.1.1",
+    "jest-preset-angular": "11.1.2",
     "prettier": "2.7.1",
     "rxjs-marbles": "^6.0.1",
     "ts-jest": "27.1.4",
-    "typescript": "4.6.4",
-    "nx": "14.1.10"
+    "typescript": "4.7.4",
+    "nx": "14.2.4"
   }
 }
