--- a/package.json
+++ b/package.json
@@ -15,46 +15,46 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "14.0.7",
-    "@angular/cdk": "14.0.6",
-    "@angular/common": "14.0.7",
-    "@angular/compiler": "14.0.7",
-    "@angular/core": "14.0.7",
-    "@angular/forms": "14.0.7",
-    "@angular/material": "14.0.6",
-    "@angular/platform-browser": "14.0.7",
-    "@angular/platform-browser-dynamic": "14.0.7",
-    "@angular/router": "14.0.7",
-    "@ngrx/component-store": "14.0.0",
-    "@ngrx/effects": "14.0.0",
-    "@ngrx/entity": "14.0.0",
-    "@ngrx/router-store": "14.0.0",
-    "@ngrx/store": "14.0.0",
-    "@nrwl/angular": "14.2.4",
-    "rxjs": "~6.6.0",
+    "@angular/animations": "14.1.3",
+    "@angular/cdk": "14.1.3",
+    "@angular/common": "14.1.3",
+    "@angular/compiler": "14.1.3",
+    "@angular/core": "14.1.3",
+    "@angular/forms": "14.1.3",
+    "@angular/material": "14.1.3",
+    "@angular/platform-browser": "14.1.3",
+    "@angular/platform-browser-dynamic": "14.1.3",
+    "@angular/router": "14.1.3",
+    "@ngrx/component-store": "14.0.2",
+    "@ngrx/effects": "14.0.2",
+    "@ngrx/entity": "14.0.2",
+    "@ngrx/router-store": "14.0.2",
+    "@ngrx/store": "14.0.2",
+    "@nrwl/angular": "14.5.10",
+    "rxjs": "7.5.6",
     "tslib": "^2.0.0",
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "14.0.7",
-    "@angular-eslint/eslint-plugin": "13.2.1",
-    "@angular-eslint/eslint-plugin-template": "13.2.1",
-    "@angular-eslint/template-parser": "13.2.1",
-    "@angular/cli": "~14.0.0",
-    "@angular/compiler-cli": "14.0.7",
-    "@angular/language-service": "14.0.7",
-    "@ngrx/schematics": "14.0.0",
-    "@ngrx/store-devtools": "14.0.0",
-    "@nrwl/cli": "14.2.4",
-    "@nrwl/cypress": "14.2.4",
-    "@nrwl/eslint-plugin-nx": "14.2.4",
-    "@nrwl/jest": "14.2.4",
-    "@nrwl/linter": "14.2.4",
-    "@nrwl/workspace": "14.2.4",
+    "@angular-devkit/build-angular": "14.1.3",
+    "@angular-eslint/eslint-plugin": "14.0.4",
+    "@angular-eslint/eslint-plugin-template": "14.0.4",
+    "@angular-eslint/template-parser": "14.0.4",
+    "@angular/cli": "~14.1.0",
+    "@angular/compiler-cli": "14.1.3",
+    "@angular/language-service": "14.1.3",
+    "@ngrx/schematics": "14.0.2",
+    "@ngrx/store-devtools": "14.0.2",
+    "@nrwl/cli": "14.5.10",
+    "@nrwl/cypress": "14.5.10",
+    "@nrwl/eslint-plugin-nx": "14.5.10",
+    "@nrwl/jest": "14.5.10",
+    "@nrwl/linter": "14.5.10",
+    "@nrwl/workspace": "14.5.10",
     "@types/jest": "27.4.1",
     "@types/node": "14.14.33",
-    "@typescript-eslint/eslint-plugin": "5.24.0",
-    "@typescript-eslint/parser": "5.24.0",
+    "@typescript-eslint/eslint-plugin": "5.36.2",
+    "@typescript-eslint/parser": "5.36.2",
     "cypress": "^8.3.0",
     "eslint": "8.15.0",
     "eslint-config-prettier": "^8.3.0",
@@ -67,6 +67,6 @@
     "rxjs-marbles": "^6.0.1",
     "ts-jest": "27.1.4",
     "typescript": "4.7.4",
-    "nx": "14.2.4"
+    "nx": "14.5.10"
   }
 }
