--- a/package.json
+++ b/package.json
@@ -15,58 +15,59 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "14.1.3",
-    "@angular/cdk": "14.1.3",
-    "@angular/common": "14.1.3",
-    "@angular/compiler": "14.1.3",
-    "@angular/core": "14.1.3",
-    "@angular/forms": "14.1.3",
-    "@angular/material": "14.1.3",
-    "@angular/platform-browser": "14.1.3",
-    "@angular/platform-browser-dynamic": "14.1.3",
-    "@angular/router": "14.1.3",
+    "@angular/animations": "14.2.1",
+    "@angular/cdk": "14.2.1",
+    "@angular/common": "14.2.1",
+    "@angular/compiler": "14.2.1",
+    "@angular/core": "14.2.1",
+    "@angular/forms": "14.2.1",
+    "@angular/material": "14.2.1",
+    "@angular/platform-browser": "14.2.1",
+    "@angular/platform-browser-dynamic": "14.2.1",
+    "@angular/router": "14.2.1",
     "@ngrx/component-store": "14.0.2",
     "@ngrx/effects": "14.0.2",
     "@ngrx/entity": "14.0.2",
     "@ngrx/router-store": "14.0.2",
     "@ngrx/store": "14.0.2",
-    "@nrwl/angular": "14.5.10",
+    "@nrwl/angular": "14.7.3",
     "rxjs": "7.5.6",
     "tslib": "^2.0.0",
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "14.1.3",
+    "@angular-devkit/build-angular": "14.2.2",
     "@angular-eslint/eslint-plugin": "14.0.4",
     "@angular-eslint/eslint-plugin-template": "14.0.4",
     "@angular-eslint/template-parser": "14.0.4",
-    "@angular/cli": "~14.1.0",
-    "@angular/compiler-cli": "14.1.3",
-    "@angular/language-service": "14.1.3",
+    "@angular/cli": "~14.2.0",
+    "@angular/compiler-cli": "14.2.1",
+    "@angular/language-service": "14.2.1",
     "@ngrx/schematics": "14.0.2",
     "@ngrx/store-devtools": "14.0.2",
-    "@nrwl/cli": "14.5.10",
-    "@nrwl/cypress": "14.5.10",
-    "@nrwl/eslint-plugin-nx": "14.5.10",
-    "@nrwl/jest": "14.5.10",
-    "@nrwl/linter": "14.5.10",
-    "@nrwl/workspace": "14.5.10",
-    "@types/jest": "27.4.1",
+    "@nrwl/cli": "14.7.3",
+    "@nrwl/cypress": "14.7.3",
+    "@nrwl/eslint-plugin-nx": "14.7.3",
+    "@nrwl/jest": "14.7.3",
+    "@nrwl/linter": "14.7.3",
+    "@nrwl/workspace": "14.7.3",
+    "@types/jest": "28.1.8",
     "@types/node": "14.14.33",
-    "@typescript-eslint/eslint-plugin": "5.36.2",
-    "@typescript-eslint/parser": "5.36.2",
+    "@typescript-eslint/eslint-plugin": "5.33.1",
+    "@typescript-eslint/parser": "5.33.1",
     "cypress": "^8.3.0",
     "eslint": "8.15.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-ngrx": "^2.0.3",
     "eslint-plugin-rxjs": "^3.3.7",
-    "jest": "27.5.1",
-    "jest-preset-angular": "11.1.2",
+    "jest": "28.1.3",
+    "jest-environment-jsdom": "28.1.1",
+    "jest-preset-angular": "12.2.2",
+    "nx": "14.7.3",
     "prettier": "2.7.1",
     "rxjs-marbles": "^6.0.1",
-    "ts-jest": "27.1.4",
-    "typescript": "4.7.4",
-    "nx": "14.5.10"
+    "ts-jest": "28.0.8",
+    "typescript": "4.7.4"
   }
 }
