add test all script

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "nx build",
     "test": "nx test",
     "test:all": "nx run-many --target=test --all=true",
+    "lint:all": "nx run-many --target=lint --all=true",
     "ci:lint": "nx affected --target=lint --base=origin/main",
     "ci:test": "nx affected --target=test --base=origin/main",
     "ci:e2e": "nx affected --target=e2e --base=origin/main"
