--- a/package.json
+++ b/package.json
@@ -16,42 +16,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "14.2.1",
-    "@angular/cdk": "14.2.1",
-    "@angular/common": "14.2.1",
-    "@angular/compiler": "14.2.1",
-    "@angular/core": "14.2.1",
-    "@angular/forms": "14.2.1",
-    "@angular/material": "14.2.1",
-    "@angular/platform-browser": "14.2.1",
-    "@angular/platform-browser-dynamic": "14.2.1",
-    "@angular/router": "14.2.1",
-    "@ngrx/component-store": "14.0.2",
-    "@ngrx/effects": "14.0.2",
-    "@ngrx/entity": "14.0.2",
-    "@ngrx/router-store": "14.0.2",
-    "@ngrx/store": "14.0.2",
-    "@nrwl/angular": "15.1.1",
+    "@angular/animations": "15.1.4",
+    "@angular/cdk": "15.1.4",
+    "@angular/common": "15.1.4",
+    "@angular/compiler": "15.1.4",
+    "@angular/core": "15.1.4",
+    "@angular/forms": "15.1.4",
+    "@angular/material": "15.1.4",
+    "@angular/platform-browser": "15.1.4",
+    "@angular/platform-browser-dynamic": "15.1.4",
+    "@angular/router": "15.1.4",
+    "@ngrx/component-store": "15.0.0",
+    "@ngrx/effects": "15.0.0",
+    "@ngrx/entity": "15.0.0",
+    "@ngrx/router-store": "15.0.0",
+    "@ngrx/store": "15.0.0",
+    "@nrwl/angular": "15.6.3",
     "rxjs": "7.5.6",
     "tslib": "^2.0.0",
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "14.2.2",
-    "@angular-eslint/eslint-plugin": "14.0.4",
-    "@angular-eslint/eslint-plugin-template": "14.0.4",
-    "@angular-eslint/template-parser": "14.0.4",
-    "@angular/cli": "~14.2.0",
-    "@angular/compiler-cli": "14.2.1",
-    "@angular/language-service": "14.2.1",
-    "@ngrx/schematics": "14.0.2",
-    "@ngrx/store-devtools": "14.0.2",
-    "@nrwl/cli": "15.1.1",
-    "@nrwl/cypress": "15.1.1",
-    "@nrwl/eslint-plugin-nx": "15.1.1",
-    "@nrwl/jest": "15.1.1",
-    "@nrwl/linter": "15.1.1",
-    "@nrwl/workspace": "15.1.1",
+    "@angular-devkit/build-angular": "15.1.5",
+    "@angular-eslint/eslint-plugin": "15.0.0",
+    "@angular-eslint/eslint-plugin-template": "15.0.0",
+    "@angular-eslint/template-parser": "15.0.0",
+    "@angular/cli": "~15.1.0",
+    "@angular/compiler-cli": "15.1.4",
+    "@angular/language-service": "15.1.4",
+    "@ngrx/schematics": "15.0.0",
+    "@ngrx/store-devtools": "15.0.0",
+    "@nrwl/cli": "15.6.3",
+    "@nrwl/cypress": "15.6.3",
+    "@nrwl/eslint-plugin-nx": "15.6.3",
+    "@nrwl/jest": "15.6.3",
+    "@nrwl/linter": "15.6.3",
+    "@nrwl/workspace": "15.6.3",
     "@types/jest": "28.1.8",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "5.43.0",
@@ -64,11 +64,10 @@
     "eslint-plugin-rxjs": "^5.0.2",
     "jest": "28.1.3",
     "jest-environment-jsdom": "28.1.1",
-    "jest-preset-angular": "12.2.2",
-    "nx": "15.1.1",
+    "jest-preset-angular": "^12.2.3",
+    "nx": "15.6.3",
     "prettier": "2.7.1",
     "ts-jest": "28.0.8",
     "typescript": "4.8.4"
   }
 }
-
