--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -28,6 +28,15 @@ jobs:
       - name: build carbotracker app
         run: npm run build -- --baseHref="/carbotracker/" --outputPath ../../app
 
+      - name: test
+        run: ls -la
+
+      - name: test
+        run: ls -la ../
+
+      - name: test
+        run: ls -la ../../
+
       - name: revert changes and checkout app-carbotracker branch
         run: |
           git stash -a
