--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -39,9 +39,9 @@ jobs:
         working-directory: /
         
       - name: add and commit
-        uses: EndBug/add-and-commit@v7
+        uses: EndBug/add-and-commit@v9
         with:
           cwd: './repo'
           default_author: github_actions
           message: 'Release new app version'
-          branch: app-carbotracker
+          new_branch: app-carbotracker
